samples/_failures_safe/1761075523_5a5b69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21bf37d5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_21bf37d5.c:169:45: error: expected ‘;’ at end of input
  169 |         tokens[token_count].type = TOKEN_EOF
      |                                             ^
      |                                             ;
./samples/SAFE/__tmp_21bf37d5.c:169:9: error: expected declaration or statement at end of input
  169 |         tokens[token_count].type = TOKEN_EOF
      |         ^~~~~~
./samples/SAFE/__tmp_21bf37d5.c:169:9: error: expected declaration or statement at end of input
